# lit

./: .gitignore  Cargo.toml  LICENSE  README.md
example/config/: anki.toml  config.toml
example/config/korean/: korean_parse_overrides.csv  korean_term_patterns.csv
example/plugins/: yt-import.user.js
example/scripts/: apply_topik_tags.sh  import_youtube.py
ext/chrome/: background.js  lit.css  manifest.json  panel.html  shared.js
ext/chrome/popup/: popup.css  popup.html  popup.js
ext/chrome/scripts/: content.js
resources/: korean_parse_overrides.csv  korean_term_patterns.csv
schema/: db.sql  migrate_book.sql  migrate_word.sql
src/: books.rs  config.rs  dict.rs  dt.rs  lib.rs  main.rs  morph.rs  vtt.rs
src/doc/: markdown.rs  mod.rs  vtt.rs
src/morph/: alpha.rs  korean.rs  mod.rs
static/: lit.js  style.css
templates/: base.html  books.html  define.html  edit_book_markdown.html  edit_book_plain.html  edit_book_vtt.html  edit_define.html  edit_word.html  import_video.html  import_video_watch.html  inline_word.html  read.html  textarea.html  vtt_cue.html  vtt_cue_edit.html  words.html
